# czml-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release-please.yml  test.yml
src/: lib.rs
src/packet/: billboard.rs  clock.rs  label.rs  mod.rs  path.rs  polyline.rs  primitives.rs  type_enums.rs
tests/: test_basic_packets.rs  test_billboard.rs  test_custom_properties.rs  test_cylinder.rs  test_document_clock.rs  test_example1.rs  test_external_examples.rs  test_label.rs  test_model.rs  test_orientation.rs  test_parent.rs  test_path.rs  test_polyline.rs  test_position.rs  test_simple_example.rs  test_tracking_example.rs
tests/data/: billboard_iss.czml  custom_properties_example.czml  cylinder_field.czml  document_with_clock.czml  example1.czml  just_document_packet.json  label_example.czml  minimal_document.czml  model_field.czml  orientation_field.czml  parent_example.czml  path_example.czml  polyline_example.czml  position_example.czml  simple-modified.czml  tracking-modified.czml
