[package]
name = "czml"
version = "0.10.0"
edition = "2021"

description = "A library for serializing/deserializing CZML content"
license = "MIT"
repository = "https://github.com/gteufelberger/czml-rs/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }
